--- a/docs/assets/css/output.css
+++ b/docs/assets/css/output.css
@@ -564,6 +564,18 @@ video {
   margin-top: 2rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-24 {
+  margin-top: 6rem;
+}
+
 .flex {
   display: flex;
 }
